tests/invalid/casestatements.nim
# Count: 1
# Negative count: 0

case a
  of 1:
    echo a
